[package]
name = "spin-archive-v2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "0.4.1"
async-graphql = "2.9.12"
async-graphql-poem = "2.9.12"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.6.7"
dotenv = "0.15.0"